# keyring-rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  appveyor.yml  build-xplat-binaries.sh  build-xplat-docs.sh  build.rs  linux-test.sh  release.toml  test-docsrs-build.sh
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build.yaml  ci.yaml  doctest.yaml  publish.yaml
ci/: run_mock.py
examples/: cli.rs  example.rs  ios.rs
iospw/: Cargo.toml
iospw/src/: lib.rs
keyring/: Cargo.toml
keyring-tester/iospw/: PasswordOps.swift  create-iospw.sh  iospw-Bridging-Header.h  iospw.h  remove-iospw.sh
keyring-tester/keyring-tester/: ContentView.swift  keyring_testerApp.swift
keyring-tester/keyring-tester.xcodeproj/: project.pbxproj
keyring-tester/keyring-testerTests/: keyring_testerTests.swift
keyring/tests/: basic.rs
src/: attrs.rs  credential.rs  error.rs  ios.rs  keyutils.rs  keyutils_persistent.rs  lib.rs  linux.rs  macos.rs  mock.rs  secret_service.rs  secret_service_with_keyutils.rs  windows.rs
tests/: basic.rs  mappers.rs  threading.rs
tests/common/: mod.rs
